--- a/urls.cfg
+++ b/urls.cfg
@@ -1,5 +1,5 @@
 google=https://google.com
-hn=https://news.ycombinator.com
-reddit=https://reddit.com
-statsig=https://www.statsig.com
-worldclock=http://worldclockapi.com/api/json/utc/now
+Transient=https://transient.ionmedialabs.com
+Forever=ce.ionmedialabs.com
+Forums=forum.btwce.com
+Wiki=wiki.btwce.com
