--- a/urls.cfg
+++ b/urls.cfg
@@ -1,5 +1,5 @@
 google=https://google.com
 Transient=https://transient.ionmedialabs.com
 Forever=ce.ionmedialabs.com
-Forums=forum.btwce.com
-Wiki=wiki.btwce.com
+Forums=https://forum.btwce.com
+Wiki=https://wiki.btwce.com
