--- a/urls.cfg
+++ b/urls.cfg
@@ -1,3 +1,3 @@
-google=https://google.com
 Forums=https://forum.btwce.com
 Wiki=https://wiki.btwce.com
+Transient=https://transient.ionmedialabs.com
